[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "bark"
version = "0.1.0"
description = "A Python package for barking"
authors = ["John Doe <johndoe@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
exclude = "__init__.py"

[tool.mypy]
files = "bark"
strict = true

[tool.pytest]
addopts = "--cov=bark --cov-report=term-missing --cov-fail-under=90"
